--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,8 +52,8 @@ jobs:
             VERSION: "v2.11"
             INTEGRATION_TESTS: "v2.11"
           - python-version: 3.6
-            VERSION: "latest"
-            INTEGRATION_TESTS: "latest"
+            VERSION: "v3.0"
+            INTEGRATION_TESTS: "v3.0"
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -106,6 +106,7 @@ jobs:
           cd ..
           git clone https://github.com/netbox-community/netbox-docker.git
           cd netbox-docker
+          git checkout 1.3.1
           tee docker-compose.override.yml <<EOF
           version: '3.4'
           services:
@@ -116,7 +117,7 @@ jobs:
           docker-compose up -d --quiet-pull
           docker container ls
           cd ..
-        if: matrix.VERSION == 'latest'
+        if: matrix.VERSION == 'v3.0'
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1.1.1
         with:
