--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "GPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-ansible-base = "^2.10.0"
+ansible-core = "^2.11.0"
 black = "19.10b0"
 codecov = "*"
 coverage = "^4.0"
