--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "GPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-ansible-base = "^2.10.0"
+ansible-core = "^2.11.0"
 black = "19.10b0"
 codecov = "*"
 coverage = "^4.0"
@@ -23,7 +23,7 @@ pyyaml = "*"
 mock = "^4.0.2"
 antsibull = "^0.25.0"
 importlib-metadata = "1.7.0"
-pylint = "^2.6.0"
+pylint = "^2.8.0"
 packaging = "^20.9"
 
 [tool.poetry.dev-dependencies]
