--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        #python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
