--- a/tests/integration/targets/v3.0/tasks/netbox_virtual_machine.yml
+++ b/tests/integration/targets/v3.0/tasks/netbox_virtual_machine.yml
@@ -49,7 +49,7 @@
     data:
       name: "Test VM One"
       cluster: "Test Cluster"
-      vcpus: 8
+      vcpus: 8.5
       memory: 8
       status: "Planned"
       virtual_machine_role: "Test VM Role"
@@ -62,7 +62,7 @@
   assert:
     that:
       - test_three is changed
-      - test_three['diff']['after']['vcpus'] == 8
+      - test_three['diff']['after']['vcpus'] == 8.5
       - test_three['diff']['after']['memory'] == 8
       - test_three['diff']['after']['status'] == "planned"
       - test_three['diff']['after']['role'] == 2
@@ -91,7 +91,7 @@
       - test_four is changed
       - test_four['virtual_machine']['name'] == "Test VM One"
       - test_four['virtual_machine']['cluster'] == 1
-      - test_four['virtual_machine']['vcpus'] == "8.00"
+      - test_four['virtual_machine']['vcpus'] == 8.5
       - test_four['virtual_machine']['memory'] == 8
       - test_four['virtual_machine']['status'] == "planned"
       - test_four['virtual_machine']['role'] == 2
