--- a/tests/integration/targets/v2.11/tasks/netbox_device_interface.yml
+++ b/tests/integration/targets/v2.11/tasks/netbox_device_interface.yml
@@ -311,3 +311,23 @@
       - test_twelve['interface']['name'] == "GigabitEthernet5"
       - test_twelve['interface']['device'] == 1
       - test_twelve['interface']['mark_connected'] == true
+
+- name: "13 - Create a child virtual device GigabitEthernet5."
+  netbox.netbox.netbox_device_interface:
+    netbox_url: "http://localhost:32768"
+    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    data:
+      device: test100
+      name: Child1
+      type: virtual
+      parent_interface: GigabitEthernet5
+  register: test_thirteen
+
+- name: "13- ASSERT"
+  assert:
+    that:
+      - test_thirteen is changed
+      - test_thirteen['msg'] == "interface Child1 created"
+      - test_thirteen['diff']['before']['state'] == 'absent'
+      - test_thirteen['diff']['after']['state'] == 'present'
+      - test_thirteen['interface']['parent'] == test_twelve['interface']['id']
