--- a/tests/integration/targets/v2.11/tasks/netbox_vm_interface.yml
+++ b/tests/integration/targets/v2.11/tasks/netbox_vm_interface.yml
@@ -158,22 +158,33 @@
       - test_five['interface']['tags'][0] == 4
       - test_five['msg'] == "interface Eth0 updated"
 
-- name: "NETBOX_VM_INTERFACE 6: Create a child virtual device Eth0."
+- name: "NETBOX_VM_INTERFACE 6: Create a parent interface"
   netbox.netbox.netbox_vm_interface:
-    netbox_url: "http://localhost:32768"
-    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    netbox_url: http://localhost:32768
+    netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
       virtual_machine: "test100-vm"
-      name: Child1
-      parent_interface: "Eth0"
-  register: test_six
+      name: "Eth10"
+    state: present
+  register: test_parent
+
+- name: "NETBOX_VM_INTERFACE 6: Create a child virtual device Eth10."
+  netbox.netbox.netbox_vm_interface:
+    netbox_url: http://localhost:32768
+    netbox_token: 0123456789abcdef0123456789abcdef01234567
+    data:
+      virtual_machine: "test100-vm"
+      name: "Child1"
+      parent_interface: "Eth10"
+    state: present
+  register: test_child
 
 - name: "NETBOX_VM_INTERFACE 6: ASSERT"
   assert:
     that:
-      - test_six is changed
-      - test_six['msg'] == "interface Child1 created"
-      - test_six['diff']['before']['state'] == 'absent'
-      - test_six['diff']['after']['state'] == 'present'
-      - test_six['interface']['parent'] == test_five['interface']['id']
+      - test_child is changed
+      - test_child['msg'] == "interface Child1 created"
+      - test_child['diff']['before']['state'] == 'absent'
+      - test_child['diff']['after']['state'] == 'present'
+      - test_child['interface']['parent'] == test_parent['interface']['id']
 
