--- a/tests/integration/targets/v3.0/tasks/main.yml
+++ b/tests/integration/targets/v3.0/tasks/main.yml
@@ -14,6 +14,9 @@
 - name: "NETBOX_PREFIX TESTS"
   include_tasks: "netbox_prefix.yml"
 
+- name: "NETBOX_SITE_GROUP TESTS"
+  include_tasks: "netbox_site_group.yml"
+
 - name: "NETBOX_SITE TESTS"
   include_tasks: "netbox_site.yml"
 
