Uncomment v3.0 in matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,9 +51,9 @@ jobs:
           - python-version: 3.6
             VERSION: "v2.11"
             INTEGRATION_TESTS: "v2.11"
-          #- python-version: 3.6
-          #  VERSION: "v3.0"
-          #  INTEGRATION_TESTS: "v3.0"
+          - python-version: 3.6
+            VERSION: "v3.0"
+            INTEGRATION_TESTS: "v3.0"
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
