Add release date

--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -582,3 +582,4 @@ releases:
     - description: Create, update or delete Config Context in NetBox
       name: netbox_config_context
       namespace: ''
+    release_date: '2021-10-25' 
