--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -583,3 +583,15 @@ releases:
       name: netbox_config_context
       namespace: ''
     release_date: '2021-10-25' 
+  3.4.0:
+    changes:
+      minor_changes:
+        - netbox_inventory_item - Add label and custom fields to module [#632](https://github.com/netbox-community/ansible_modules/pull/632)
+        - nb_inventory - Cache OpenAPI locally to speed up inventory [#617](https://github.com/netbox-community/ansible_modules/pull/617)
+        - netbox_vm_interface - Add custom fields to module [#637](https://github.com/netbox-community/ansible_modules/pull/637)
+      bugfixes:
+        - netbox_site - Ensure idempotency between NetBox version 2.11 and 3.00 [#631](https://github.com/netbox-community/ansible_modules/pull/631)
+        - netbox_virtual_machine - Ensure idempotency between NetBox version 2.11 and 3.00 [#633](https://github.com/netbox-community/ansible_modules/pull/633)
+        - nb_lookup - Fix documentation of validate_cert [#629](https://github.com/netbox-community/ansible_modules/pull/629)
+
+    release_date: '2021-11-07'
