Add typed-ast>1.5.0 to avoid black error

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "GPLv3"
 python = "^3.6"
 ansible-core = "^2.11.0"
 black = "19.10b0"
+typed-ast = "^1.5.0"
 codecov = "*"
 coverage = "^4.0"
 cryptography = "*"
