--- a/tests/integration/targets/v3.0/tasks/netbox_provider_network.yml
+++ b/tests/integration/targets/v3.0/tasks/netbox_provider_network.yml
@@ -9,7 +9,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      provider: Test provider
+      provider: Test Provider
       name: Test Provider Network One
     state: present
   register: test_one
@@ -28,7 +28,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      provider: Test provider
+      provider: Test Provider
       name: Test Provider Network One
     state: present
   register: test_two
@@ -45,7 +45,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      provider: Test provider
+      provider: Test Provider
       name: Test Provider Network One
       description: Describe a Provider Network
       comments: "A provider network"
@@ -68,7 +68,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      provider: Test provider
+      provider: Test Provider
       name: Test Provider Network One
     state: absent
   register: test_four
