--- a/tests/integration/targets/v3.1/tasks/netbox_contact_role.yml
+++ b/tests/integration/targets/v3.1/tasks/netbox_contact_role.yml
@@ -19,8 +19,8 @@
       - test_one is changed
       - test_one['diff']['before']['state'] == "absent"
       - test_one['diff']['after']['state'] == "present"
-      - test_one['role']['name'] == "Test Contact Role"
-      - test_one['role']['slug'] == "test-contact-role"
+      - test_one['contact_role']['name'] == "Test Contact Role"
+      - test_one['contact_role']['slug'] == "test-contact-role"
       - test_one['msg'] == "contact_role Test Contact Role created"
 
 - name: "CONTACT_ROLE 2: Create duplicate"
@@ -36,8 +36,8 @@
   assert:
     that:
       - not test_two['changed']
-      - test_two['role']['name'] == "Test Contact Role"
-      - test_two['role']['slug'] == "test-contact-role"
+      - test_two['contact_role']['name'] == "Test Contact Role"
+      - test_two['contact_role']['slug'] == "test-contact-role"
       - test_two['msg'] == "contact_role Test Contact Role already exists"
 
 - name: "CONTACT_ROLE 3: ASSERT - Update"
@@ -55,9 +55,9 @@
     that:
       - test_three is changed
       - test_three['diff']['after']['description'] == "Update description"
-      - test_three['role']['name'] == "Test Contact Role"
-      - test_three['role']['slug'] == "test-contact-role"
-      - test_three['role']['description'] == "Update description"
+      - test_three['contact_role']['name'] == "Test Contact Role"
+      - test_three['contact_role']['slug'] == "test-contact-role"
+      - test_three['contact_role']['description'] == "Update description"
       - test_three['msg'] == "contact_role Test Contact Role updated"
 
 - name: "CONTACT_ROLE 4: ASSERT - Delete"
@@ -90,5 +90,5 @@
   assert:
     that:
       - not test_five['changed']
-      - test_five['role'] == None
+      - test_five['contact_role'] == None
       - test_five['msg'] == "contact_role Test Contact Role already absent"
