--- a/tests/integration/targets/v3.1/tasks/main.yml
+++ b/tests/integration/targets/v3.1/tasks/main.yml
@@ -20,6 +20,12 @@
 - name: "NETBOX_SITE_GROUP TESTS"
   include_tasks: "netbox_site_group.yml"
 
+- name: "NETBOX_CONTACT TESTS"
+  include_tasks: "netbox_contact.yml"
+
+- name: "NETBOX_CONTACT_ROLE TESTS"
+  include_tasks: "netbox_contact_role.yml"
+
 - name: "NETBOX_TENTANT TESTS"
   include_tasks: "netbox_tenant.yml"
 
