--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ pyyaml = "*"
 mock = "^4.0.2"
 antsibull = "^0.25.0"
 importlib-metadata = "1.7.0"
-pylint = "^2.8.0"
-packaging = "^20.9"
+pylint = "*"
+packaging = "*"
 
 [tool.poetry.dev-dependencies]
 
