--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ license = "GPLv3"
 python = "^3.8"
 ansible-core = "^2.12.0"
 black = "21.12b0"
-typed-ast = "^1.5.0"
 codecov = "*"
 coverage = "^4.0"
 cryptography = "*"
@@ -22,7 +21,7 @@ pytest-mock = "*"
 pytest-xdist = "*"
 pyyaml = "*"
 mock = "^4.0.2"
-antsibull = "^0.25.0"
+antsibull = "*"
 importlib-metadata = "1.7.0"
 pylint = "*"
 packaging = "*"
