--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.8", "3.9", "3.10"]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -18,7 +18,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install and configure Poetry
-        uses: snok/install-poetry@v1.1.1
+        uses: snok/install-poetry@v1
         with:
           virtualenvs-create: false
       - name: Install Python packages
@@ -28,15 +28,15 @@ jobs:
           ansible-galaxy collection build .
           ansible-galaxy collection install netbox*.tar.gz -p /home/runner/.ansible/collections
       - name: Run Black
-        run: black . --check --diff
+        run: poetry run black . --check --diff
       - name: Run Ansible Sanity tests
-        run: ansible-test sanity -v --requirements --python ${{ matrix.python-version }} --skip-test pep8 plugins/
+        run: poetry run ansible-test sanity -v --requirements --python ${{ matrix.python-version }} --skip-test pep8 plugins/
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
       - name: Run Ansible Unit tests
-        run: ansible-test units -vvv --coverage --python ${{ matrix.python-version }}
+        run: poetry run ansible-test units -vvv --coverage --python ${{ matrix.python-version }}
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
       - name: Run Ansible Coverage
-        run: ansible-test coverage report --all --omit "tests/*,hacking/*,docs/*" --show-missing
+        run: poetry run ansible-test coverage report --all --omit "tests/*,hacking/*,docs/*" --show-missing
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
   integration:
     runs-on: ubuntu-latest
