--- a/galaxy.yml
+++ b/galaxy.yml
@@ -9,7 +9,7 @@ namespace: netbox
 name: netbox
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 3.4.0
+version: 3.5.0
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -18,6 +18,7 @@ readme: README.md
 # @nicks:irc/im.site#channel'
 authors:
   - Mikhail Yohman <mikhail.yohman@gmail.com>
+  - Martin Rødvand <martin@rodvand.net>
 
 ### OPTIONAL but strongly recommended
 
