Add changelog data

--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -604,3 +604,39 @@ releases:
         name: netbox_provider_network
         namespace: ''
     release_date: '2021-11-28'
+  3.5.0:
+    changes:
+      release_summary:
+        First release with some NetBox 3.1 modules, and new wireless endpoint support. Remember to update your pynetbox
+        to utilise the wireless endpoint support.
+      minor_changes:
+        - netbox_contact, netbox_contact_group, netbox_contact_role - Add modules [#671](https://github.com/netbox-community/ansible_modules/pull/671)
+        - netbox_wireless_lan, netbox_wireless_lan_group, netbox_wireless_link - Add modules [#678](https://github.com/netbox-community/ansible_modules/pull/678)
+        - nb_inventory - Pull extended inventory data for prefixes and site [#646](https://github.com/netbox-community/ansible_modules/pull/646)
+        - nb_lookup - Add endpoints for wireless (new in NetBox 3.1) [#673](https://github.com/netbox-community/ansible_modules/pull/673)
+        - netbox_inventory_item - Add parent field to module [#682](https://github.com/netbox-community/ansible_modules/pull/682)
+        - netbox_circuit_termination - Add mark_connected field to module [#686](https://github.com/netbox-community/ansible_modules/pull/686)
+        - netbox_region - Add description, tags, custom_fields to module [#689](https://github.com/netbox-community/ansible_modules/pull/689)
+
+      bugfixes:
+        - Use individual list items when looking for objects  [#570](https://github.com/netbox-community/ansible_modules/pull/570)
+
+    modules:
+      - description: Create, update or delete Contact objects in NetBox 
+        name: netbox_contact
+        namespace: ''
+      - description: Create, update or delete Contact Group objects in NetBox 
+        name: netbox_contact_group
+        namespace: ''
+      - description: Create, update or delete Contact Role objects in NetBox 
+        name: netbox_contact_role
+      - description: Create, update or delete Wireless LAN objects in NetBox 
+        name: netbox_wireless_lan
+        namespace: ''
+      - description: Create, update or delete Wireless LAN Group objects in NetBox 
+        name: netbox_wireless_lan_group
+        namespace: ''
+      - description: Create, update or delete Wireless Link objects in NetBox 
+        name: netbox_wireless_link
+        namespace: ''
+    relese_data: '2022-01-11'
