move to a value instead of a placeholder

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -32,9 +32,11 @@ body:
       description: >
         What version of the Ansible NetBox Collection are you currently running?
         Paste the output of "ansible --version" 
-      placeholder: >
+      value: >
         '''bash
+
         <!--- Paste verbatim output from "ansible --version" between quotes -->
+
         '''
     validations:
       required: true
