--- a/.github/ISSUE_TEMPLATE/housekeeping.yaml
+++ b/.github/ISSUE_TEMPLATE/housekeeping.yaml
@@ -1,7 +1,8 @@
 ---
 name: 🏡 Housekeeping
 description: A change pertaining to the codebase itself (developers only)
-labels: ["type: housekeeping"]
+title: "[Housekeeping]: "
+labels: ["housekeeping"]
 body:
   - type: markdown
     attributes:
