--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "GPLv3"
 [tool.poetry.dependencies]
 python = "^3.8"
 ansible-core = "^2.12.0"
-black = "21.12b0"
+black = "*"
 codecov = "*"
 coverage = "^4.0"
 cryptography = "*"
