--- a/tests/integration/targets/v3.1/tasks/netbox_custom_field.yml
+++ b/tests/integration/targets/v3.1/tasks/netbox_custom_field.yml
@@ -12,6 +12,7 @@
       content_types:
         - "dcim.device"
       name: A_CustomField
+      type: text
     state: present
   register: test_one
 
