--- a/tests/integration/targets/v3.1/tasks/main.yml
+++ b/tests/integration/targets/v3.1/tasks/main.yml
@@ -208,3 +208,12 @@
         - netbox_custom_field
   tags:
     - netbox_custom_field
+
+- name: "NETBOX_CUSTOM_LINK TESTS"
+  include_tasks:
+    file: "netbox_custom_link.yml"
+    apply:
+      tags:
+        - netbox_custom_link
+  tags:
+    - netbox_custom_link
